--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^17.0.2",
     "react-notifications-component": "^3.1.0",
+    "react-paginate": "^7.1.3",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "react-text-transition": "^1.3.0",
